--- a/working-notes/index-final-before-content.html
+++ b/working-notes/index-final-before-content.html
@@ -41,7 +41,7 @@
 
 <!-- class project via bootsrap versus ealier version like Rover --> 
 
-  <title>Pocket Truth Teller Answers All Your Questions... Truthfully</title>
+  <title>a1 Truth Teller Anwsers All Your Questions... Truthfully</title>
 
 </head>
 
@@ -97,7 +97,7 @@
     <!-- right sided navigation  (later implement with different inline styling) -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item  px-2">
-        <a class="nav-link text-dark" href="#test">TRUTH</a>
+        <a class="nav-link text-dark" href="#test">TEST</a>
       </li>
       <li class="nav-item px-2">
         <a class="nav-link text-dark" href="#special">SPECIAL</a>
@@ -113,7 +113,7 @@
 
 <!-- hero alert -->
 
-<p class="heroHeading">THE TRUTH REVEALED - The Pocket Truth Teller - Providing you All the Answers Right Away </p>
+<p class="heroHeading"> Presenting The Real Truth Teller - All the Anwsers Right at your Fingertips </p>
 
 
 <!-- Hero Animated Carousel-->
@@ -175,29 +175,28 @@
     <div class="container">
         <div class="row">
             <h2 id="what" class="toptopic">What is it</h2>
-          <p class="primary">Owning your own Pocket Truth Teller is like having a compass to guide you in the right direction.<br> Holding this hand-held device, and formulating the right question, will present you with the correct response. 
-            </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-12">
           <h2 id="how" class="topic">How does it work</h2>
-          <p> Just as radios pick up information from unseen radio waves, the Pocket Truth Teller serves as a powerful antenna that receives information from the vibrations and energy waves emitted by people, places, thoughts and things. The Pocket Truth Teller helps you get true answers and find your way to true happiness employing the ancient art of pendulum dowsing that has also been called "divining" for its ability to provide information and predict the future. </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
            <h2 id="when" class="topic">When can I use it</h2>
-          <p>Practical to use anytime as selected by The American Academy of Science, The Academy of Sciences of Paris, The Canadian Ministry of Agriculture, The British Academy of Science, The British Army, The Smithsonian Institution, The U.S. Marines, The former Soviet Union, The Government of the Netherlands, The United Nations Educational, Scientific and Cultural Organization, National Aeronautics and Space Administration and many private and public utilities workers throughout the world.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, mollitia natus amet eligendi consequuntur. Veritatis ullam debitis voluptas repellat laboriosam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
            <h2 id="where" class="topic">Where is it best</h2>
-          <p>You can get the right answers anywhere as the unique shape of The Pocket Truth Teller is the secret to its extra power that allows you to excel in all your questions.  It has been reviewed by the leading trade journal as "the most responsive". While the inner-workings of the Pocket Truth Teller may be complex, it evidently is able to answer questions that logical reason could not - and soon you will experience how the Pocket Truth Teller gives you answers you can trust all the time.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, error, itaque non vel architecto ratione obcaecati doloribus delectus illum harum?</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-          <h2 id="why" class="topic">Why care</h2>
-          <p>Benefit from knowing the Truth! It is an amazing sight to see the Pocket Truth Teller swinging at such precision when a moment before it was hanging still, and all you did was ask a question. This is "Pendulum Power"in action. Now is the rigth time for you to start saving countless amounts of money, not to mention time and energy, - as you no longer have the pain of agonizing over correct choices and true decisions. </p>
+          <h2 id="why" class="topic">Why should you care</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, nam voluptate accusantium nulla distinctio odit aliquam voluptatem ab. Earum.</p>
          </div>
           <div class="row">
             <h2 class="toptopic">Get Yours Now</h2>
-          <p class="primary">Owning your own Pocket Truth Teller is an assurance that every answer you get is an answer you can trust. <br> And instead of getting it for its regular price of  USD $47.00, you can get yours for only $29.95... and I will include illustrated instructions that allow you to immediately get the right answers to any question.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
       </div>
     </div>
@@ -209,24 +208,24 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-6 col-12">
-          <h2 class="topic">Amazing Grace</h2>
-          <p class="testimonial">"My GOD! Already I would be blind without this and it has just been 24hrs. I was blind and now I see. Amazing Grace!!! This is as important or even more important than the computer. Leaving the house without it in your pocket would be like leaving the house with no clothes once you have experienced it."</p>
+          <h2 class="topic">Testimonial 1</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-           <h2 class="topic">Love it</h2>
-          <p class="testimonial">I love my beautiful [Pocket Truth Teller]... I find that I get the clearest, most accurate results. All of my friends agree that it is an excellent tool.</p>
+           <h2 class="topic">Testimonial 2</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, mollitia natus amet eligendi consequuntur. Veritatis ullam debitis voluptas repellat laboriosam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-           <h2 class="topic">Skeptical</h2>
-          <p class="testimonial">"I am really intrigued and quite frankly amazed with this new discovery. I must admit, I was skeptical. Your product looked great and your presentation was very informative and insightful. Your instructions are very precise and to the point."</p>
+           <h2 class="topic">Testimonial 3</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, error, itaque non vel architecto ratione obcaecati doloribus delectus illum harum?</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-          <h2 class="topic">Friend For Life</h2>
-          <p class="testimonial">"I was extremely sceptical but felt for the money involed I had nothing to lose. I've never seen anything like it. I must admit I was a bit spooked because I'd assumed you had to give it some momentum to get it going....not at all. BOB [The Pocket Truth Teller] is now a friend for life"</p>
+          <h2 class="topic">Testimonial 4</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, nam voluptate accusantium nulla distinctio odit aliquam voluptatem ab. Earum.</p>
          </div>
           <div class="row">
             <h2 id="special" class="toptopic">Special Offer</h2>
-          <p class="primary">Buy 2 + Get 1 FREE one for the office, one to lend out, the perfect gift.  So instead paying  3 x $47 = $141 you will get 3 Pocket Truth Tellers for only $59 Includes and we will include FREE tips that will have you the find whole truth and nothing but the truth. </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
       </div>
     </div>
@@ -236,31 +235,31 @@
     <hr>
     <div class="container">
         <div class="row">
-            <h2 id="test" class="toptopic">GOT Questions – Get True Answers</h2>
-          <p class="primary">Feeling lost? Looking for Love ?  Want more money?  Happy at home?  Feeling Good? <br> The Pocket Truth Teller can help you find your way to your true happiness. </p>
+            <h2 id="test" class="toptopic">Suceed in Tests</h2>
+          <p>How would it feel to get the right answer every time.  Let me show you.  Type inb the name of a color (in english) and let me guess it accurately</p>
  <!-- jquery let me gues the color ... be more specifc-->
 
         </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-12">
           <h2 class="topic">True Love</h2>
-          <p>Ask Questions Like: Is this person honest?  Is this a good relationship for me?  Is this person truly available? Would this be a good time to visit with family?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-           <h2 class="topic">True Wellbeing</h2>
-          <p>Ask Questions Like: Is this the best doctor for me? Are there chemicals or pesticides in this food? Is this a good diet for me? </p>
+           <h2 class="topic">True Health</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, mollitia natus amet eligendi consequuntur. Veritatis ullam debitis voluptas repellat laboriosam.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
-           <h2 class="topic">True Direction</h2>
-          <p>Ask Questions Like: Is this the best place for me to travel at this time? Is this the best choice for me? Is this the best thing for me to buy?</p>
+           <h2 class="topic">True Career</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, error, itaque non vel architecto ratione obcaecati doloribus delectus illum harum?</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
           <h2 class="topic">True Purpose</h2>
-          <p>Ask Questions Like: Should I say yes/no to this offer? Am I resisting ________ because of fear?  Is this the best intention to set to accomplish my goals?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, nam voluptate accusantium nulla distinctio odit aliquam voluptatem ab. Earum.</p>
          </div>
           <div class="row">
             <h2 class="toptopic">FREE SHIPPING</h2>
-          <p class="primary">I want you to be able to receive true answers, and I also want you to experience the peace, confidence and trust that comes from getting the right answer to any question anytime, anywhere. <br> Satisfaction Guaranteed and if you order now you also get free shipping anywhere in the USA</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
         </div>
       </div>
     </div>
@@ -273,7 +272,7 @@
 
 <section class="footerFlex">
   <div class="footerNav">
-    <p class=nf>© 2023 Millennium</p> 
+    <p class=nf>© 2023 Millennium Inc.</p> 
   </div>
   <div class="footerNav">
     <p class=nf><a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/">As Featured On</a></p>
