--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
     <div class="container">
         <div class="row">
             <h2 id="what" class="toptopic">What is it</h2>
-          <h3 class="primary"> Owning your own Pocket Truth Teller is like having a compass to guide you in the right direction.<br> Holding this hand-held device, and formulating the right question, will present you with the correct response. 
-            </h3>
+          <p class="primary"> Owning your own Pocket Truth Teller is like having a compass to guide you in the right direction.<br> Holding this hand-held device, and formulating the right question, will present you with the correct response. 
+            </p>
         </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-12">
