--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <!-- this link to bootstrap css - and must be placed before own custom css file as per https://getbootstrap.com/docs/5.0/getting-started/introduction/-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  
   <!-- this is link to normalize.css will makesbrowsers render all elements more consistently as explained here: https://necolas.github.io/normalize.css/ (this is external code) -->
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
@@ -24,6 +25,11 @@
   
 
   <!-- include custom meta data (seo/robots)-->
+
+
+
+   <!-- additinal Bootstrap CSS  for navigation - top header-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
 
@@ -61,7 +67,7 @@
 
 <!--LOGO-->  
 <!-- courtesy of https://www.designevo.com/apps/logo/ -->
-  <a class="navbar-brand mr-5" href="#">
+  <a class="navbar-brand mr-5" href="/index.html">
     <img src="./images/truth-teller-nav-logo-1.jpg" alt="Truth Teller" >
   </a>
     
