--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <!-- this is link to normalize.css will makesbrowsers render all elements more consistently as explained here: https://necolas.github.io/normalize.css/ (this is external code) -->
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
+  <!-- additinoal Bootstrap CSS  for navigation - top header-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
   <!-- this is my custom css link -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -28,8 +31,7 @@
 
 
 
-   <!-- additinal Bootstrap CSS  for navigation - top header-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
 
 
