--- a/test.html
+++ b/test.html
@@ -43,15 +43,21 @@
 <!-- MASTER PROJECT REFERENCE --> 
 <!-- class project via bootsrap versus ealier version like Rover -->
   
-  <title>test TRUTH TELLER</title>
+
+  <title>t1 Pocket Truth Teller Answers All Your Questions... Truthfully</title>
 </head>
 
 
 <body>
 
+<!--NAVIGATION-->
+<!-- decide if duplicating navigation on every page is desired -->
+<!-- basic code is: <nav><a href="index.html">Text</a></nav> -->
 
 
 <!--TOP HEADER -->
+
+<section>
 
 <!--     container top nav bar -->
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -107,7 +113,185 @@
     
     
   </div>
+
+  </nav>
+</section>
 <!--     end nav link -->
+
+
+<!-- Hero Animated Carousel-->
+<!-- will only function when in live mode -->
+<!--hero code courtesy of https://web-eau.net/en/blog/examples-header-bootstrap  #9 -->
+
+<section>
+
+<header>
+    <div class="owl-carousel owl-theme">
+        <div class="item">
+            <img src="https://cdn.pixabay.com/photo/2015/05/31/10/51/technology-791029_960_720.jpg" alt="">
+            <div class="cover">
+                <div class="container">
+                    <div class="header-content">
+                        <div class="line"></div>
+                        <h2>Discover Your True Choices</h2>
+                        <h1>Reveal the truth</h1>
+                        <h4>The Key to true answers instantly at your fingertips</h4>
+                    </div>
+                </div>
+             </div>
+        </div>                    
+        <div class="item">
+            <img src="https://cdn.pixabay.com/photo/2017/10/17/19/11/fantasy-2861815_960_720.jpg" alt="">
+            <div class="cover">
+                <div class="container">
+                    <div class="header-content">
+                        <div class="line animated bounceInLeft"></div>
+                        <h2>Find Your True Purpose</h2>
+                        <h1>Achieve true greatness</h1>
+                        <h4>Develop automatic confidence when you know you own truth</h4>
+                    </div>
+                </div>
+             </div>
+        </div>                
+        <div class="item">
+            <img src="https://cdn.pixabay.com/photo/2017/07/17/23/51/wormhole-2514312_960_720.jpg" alt="">
+            <div class="cover">
+                <div class="container">
+                    <div class="header-content">
+                        <div class="line animated bounceInLeft"></div>
+                        <h2>Read Your True Future</h2>
+                        <h1>Gain true insight</h1>
+                        <h4>Expand your Universe with truth on your side</h4>
+                    </div>
+                </div>
+             </div>
+        </div>
+    </div>
+</header>
+
+</section>
+
+<!-- topic section explaining product -->
+
+    <hr>
+    <div class="container">
+        <div class="row">
+            <h2 id="what" class="toptopic">What is it</h2>
+          <p class="primary"> Owning your own Pocket Truth Teller is like having a compass to guide you in the right direction.<br> Holding this hand-held device, and formulating the right question, will present you with the correct response. 
+            </p>
+        </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-12">
+          <h2 id="how" class="topic">How does it work</h2>
+          <p> Just as radios pick up information from unseen radio waves, the Pocket Truth Teller serves as a powerful antenna that receives information from the vibrations and energy waves emitted by people, places, thoughts and things. The Pocket Truth Teller helps you get true answers and find your way to true happiness employing the ancient art of pendulum dowsing that has also been called "divining" for its ability to provide information and predict the future. </p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+           <h2 id="when" class="topic">When can I use it</h2>
+          <p>Practical to use anytime as selected by The American Academy of Science, The Academy of Sciences of Paris, The Canadian Ministry of Agriculture, The British Academy of Science, The British Army, The Smithsonian Institution, The U.S. Marines, The former Soviet Union, The Government of the Netherlands, The United Nations Educational, Scientific and Cultural Organization, National Aeronautics and Space Administration and many private and public utilities workers throughout the world.</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+           <h2 id="where" class="topic">Where is it best</h2>
+          <p>You can get the right answers anywhere as the unique shape of The Pocket Truth Teller is the secret to its extra power that allows you to excel in all your questions.  It has been reviewed by the leading trade journal as "the most responsive". While the inner-workings of the Pocket Truth Teller may be complex, it evidently is able to answer questions that logical reason could not - and soon you will experience how the Pocket Truth Teller gives you answers you can trust all the time.</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+          <h2 id="why" class="topic">Why care</h2>
+          <p>Benefit from knowing the Truth! It is an amazing sight to see the Pocket Truth Teller swinging at such precision when a moment before it was hanging still, and all you did was ask a question. This is "Pendulum Power"in action. Now is the rigth time for you to start saving countless amounts of money, not to mention time and energy, - as you no longer have the pain of agonizing over correct choices and true decisions. </p>
+         </div>
+          <div class="row">
+            <h2 class="toptopic">Get Yours Now</h2>
+          <p class="primary">Owning your own Pocket Truth Teller is an assurance that every answer you get is an answer you can trust. <br> And instead of getting it for its regular price of  USD $47.00, you can get yours for only $29.95... and I will include illustrated instructions that allow you to immediately get the right answers to any question.</p>
+        </div>
+      </div>
+    </div>
+    <hr>
+
+    <!-- testimonial section --> 
+
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-12">
+          <h2 class="topic">Amazing Grace</h2>
+          <p class="testimonial">"My GOD! Already I would be blind without this and it has just been 24hrs. I was blind and now I see. Amazing Grace!!! This is as important or even more important than the computer. Leaving the house without it in your pocket would be like leaving the house with no clothes once you have experienced it."</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+           <h2 class="topic">Love it</h2>
+          <p class="testimonial">I love my beautiful [Pocket Truth Teller]... I find that I get the clearest, most accurate results. All of my friends agree that it is an excellent tool.</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+           <h2 class="topic">Skeptical</h2>
+          <p class="testimonial">"I am really intrigued and quite frankly amazed with this new discovery. I must admit, I was skeptical. Your product looked great and your presentation was very informative and insightful. Your instructions are very precise and to the point."</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+          <h2 class="topic">Friend For Life</h2>
+          <p class="testimonial">"I was extremely sceptical but felt for the money involed I had nothing to lose. I've never seen anything like it. I must admit I was a bit spooked because I'd assumed you had to give it some momentum to get it going....not at all. BOB [The Pocket Truth Teller] is now a friend for life"</p>
+         </div>
+          <div class="row">
+            <h2 id="special" class="toptopic">Special Offer</h2>
+          <p class="primary">Buy 2 + Get 1 FREE one for the office, one to lend out, the perfect gift.  So instead paying  3 x $47 = $141 you will get 3 Pocket Truth Tellers for only $59 Includes and we will include FREE tips that will have you the find whole truth and nothing but the truth. </p>
+        </div>
+      </div>
+    </div>
+    <hr>
+
+    <!-- teaser & test section --> 
+    <hr>
+    <div class="container">
+        <div class="row">
+            <h2 id="test" class="toptopic">GOT Questions – Get True Answers</h2>
+          <p class="primary">Feeling lost? Looking for Love ?  Want more money?  Happy at home?  Feeling Good? <br> The Pocket Truth Teller can help you find your way to your true happiness. </p>
+        <!-- future jquery let me guess the color ... be more specifc-->
+
+        </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-12">
+          <h2 class="topic">True Love</h2>
+          <p>Ask Questions Like: Is this person honest?  Is this a good relationship for me?  Is this person truly available? Would this be a good time to visit with family?</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+           <h2 class="topic">True Wellbeing</h2>
+          <p>Ask Questions Like: Is this the best doctor for me? Are there chemicals or pesticides in this food? Is this a good diet for me? </p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+           <h2 class="topic">True Direction</h2>
+          <p>Ask Questions Like: Is this the best place for me to travel at this time? Is this the best choice for me? Is this the best thing for me to buy?</p>
+        </div>
+        <div class="col-lg-3 col-md-6 col-12">
+          <h2 class="topic">True Purpose</h2>
+          <p>Ask Questions Like: Should I say yes/no to this offer? Am I resisting ________ because of fear?  Is this the best intention to set to accomplish my goals?</p>
+         </div>
+          <div class="row">
+            <h2 class="toptopic">FREE SHIPPING</h2>
+          <p class="primary">I want you to be able to receive true answers, and I also want you to experience the peace, confidence and trust that comes from getting the right answer to any question anytime, anywhere. <br> Satisfaction Guaranteed and if you order now you also get free shipping anywhere in the USA</p>
+        </div>
+      </div>
+    </div>
+    <hr>
+
+    <!-- SIMPLE FOOTER -->
+<!-- to be refactored - see working notes files for complex footer -->
+
+<!-- footer - with flex -->
+
+<section class="footerFlex">
+  <div class="footerNav">
+    <p class=nf>© 2023 Millennium</p> 
+  </div>
+  <div class="footerNav">
+    <p class=nf><a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/">As Featured On</a></p>
+    <a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/"><img src="images/cosmopolitan-logo.jpg" alt="Cosmopolitan" class="responsive"/></a>
+  </div>
+  <div class="footerNav">
+    <p class=nf><a href="">About</a></p>
+  </div>
+   <div class="footerNav">
+     <p class=nf><a href="mailto:info@millenniumppp.com">Contact</a></p>
+  </div>
+</section>
+
+
+
+
 
 
 <!-- SCRIPTS -->
