--- a/test.html
+++ b/test.html
@@ -205,6 +205,7 @@
          </div>
           <div class="row">
             <h2 class="toptopic">Get Yours Now</h2>
+            <img src="images/all-the-right-anwsers.jpg" alt="Truth Teller" class="responsive center-img"/>
           <p class="primary">Owning your own Pocket Truth Teller is an assurance that every answer you get is an answer you can trust. <br> And instead of getting it for its regular price of  USD $47.00, you can get yours for only $29.95... and I will include illustrated instructions that allow you to immediately get the right answers to any question.</p>
         </div>
       </div>
