--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
          </div>
           <div class="row">
             <h2 id="special" class="toptopic">Special Offer</h2>
+             <img src="images/pocket.jpg" alt="Truth Teller" class="responsive center-img"/>
           <p class="primary">Buy 2 + Get 1 FREE one for the office, one to lend out, the perfect gift.  So instead paying  3 x $47 = $141 you will get 3 Pocket Truth Tellers for only $59 Includes and we will include FREE tips that will have you the find whole truth and nothing but the truth. </p>
         </div>
       </div>
@@ -266,7 +267,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-12">
            <h2 class="topic">True Direction</h2>
-          <p>Ask Questions Like: Is this the best place for me to travel at this time? Is this the best choice for me? Is this the best thing for me to buy?</p>
+           <p>Ask Questions Like: Is this the best place for me to travel at this time? Is this the best choice for me? Is this the best thing for me to buy?</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
           <h2 class="topic">True Purpose</h2>
@@ -274,7 +275,8 @@
          </div>
           <div class="row">
             <h2 class="toptopic">FREE SHIPPING</h2>
-          <p class="primary">I want you to be able to receive true answers, and I also want you to experience the peace, confidence and trust that comes from getting the right answer to any question anytime, anywhere. <br> Satisfaction Guaranteed and if you order now you also get free shipping anywhere in the USA</p>
+             <img src="images/answer-any-question.jpg" alt="Truth Teller" class="responsive center-img"/>
+            <p class="primary">I want you to be able to receive true answers, and I also want you to experience the peace, confidence and trust that comes from getting the right answer to any question anytime, anywhere. <br> Satisfaction Guaranteed and if you order now you also get free shipping anywhere in the USA</p>
         </div>
       </div>
     </div>
