--- a/test.html
+++ b/test.html
@@ -207,6 +207,15 @@
             <h2 class="toptopic">Get Yours Now</h2>
             <img src="images/all-the-right-anwsers.jpg" alt="Truth Teller" class="responsive center-img"/>
           <p class="primary">Owning your own Pocket Truth Teller is an assurance that every answer you get is an answer you can trust. <br> And instead of getting it for its regular price of  USD $47.00, you can get yours for only $29.95... and I will include illustrated instructions that allow you to immediately get the right answers to any question.</p>
+
+<!-- add paypal button and center by adding style="display: block; margin: 0 auto;" on image line between input and type -->
+<!--29.95-->
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick" />
+  <input type="hidden" name="hosted_button_id" value="5B9TKRW6X9QQY" />
+  <input type="hidden" name="currency_code" value="USD" />
+  <input style="display: block; margin: 0 auto;" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
+</form>
         </div>
       </div>
     </div>
@@ -235,7 +244,18 @@
          </div>
           <div class="row">
             <h2 id="special" class="toptopic">Special Offer</h2>
+
+
           <p class="primary">Buy 2 + Get 1 FREE one for the office, one to lend out, the perfect gift.  So instead paying  3 x $47 = $141 you will get 3 Pocket Truth Tellers for only $59 Includes and we will include FREE tips that will have you the find whole truth and nothing but the truth. </p>
+<!-- add paypal button and center by adding style="display: block; margin: 0 auto;" on image line between input and type -->
+<!--59.90-->
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick" />
+  <input type="hidden" name="hosted_button_id" value="Z2AQ28F3TVCVJ" />
+  <input type="hidden" name="currency_code" value="USD" />
+  <input style="display: block; margin: 0 auto;" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
+</form>
         </div>
       </div>
     </div>
@@ -247,6 +267,9 @@
         <div class="row">
             <h2 id="test" class="toptopic">GOT Questions – Get True Answers</h2>
           <p class="primary">Feeling lost? Looking for Love ?  Want more money?  Happy at home?  Feeling Good? <br> The Pocket Truth Teller can help you find your way to your true happiness. </p>
+
+
+
         <!-- future jquery let me guess the color ... be more specifc-->
 
         </div>
