--- a/working-notes/index--final-after photos.html
+++ b/working-notes/index--final-after photos.html
@@ -212,14 +212,6 @@
             <h2 class="toptopic">Get Yours Now</h2>
             <img src="images/all-the-right-anwsers.jpg" alt="Truth Teller" class="responsive center-img"/>
           <p class="primary">Owning your own Pocket Truth Teller is an assurance that every answer you get is an answer you can trust. <br> And instead of getting it for its regular price of  USD $47.00, you can get yours for only $29.95... and I will include illustrated instructions that allow you to immediately get the right answers to any question.</p>
-<!-- add paypal button and center by adding style="display: block; margin: 0 auto;" on image line between input and type -->
-<!--29.95-->
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-  <input type="hidden" name="cmd" value="_s-xclick" />
-  <input type="hidden" name="hosted_button_id" value="5B9TKRW6X9QQY" />
-  <input type="hidden" name="currency_code" value="USD" />
-  <input style="display: block; margin: 0 auto;" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
-</form>
         </div>
       </div>
     </div>
@@ -231,7 +223,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-6 col-12">
-          <h2 class="topic">Amazing</h2>
+          <h2 class="topic">Amazing Grace</h2>
           <p class="testimonial">"My GOD! Already I would be blind without this and it has just been 24hrs. I was blind and now I see. Amazing Grace!!! This is as important or even more important than the computer. Leaving the house without it in your pocket would be like leaving the house with no clothes once you have experienced it."</p>
         </div>
         <div class="col-lg-3 col-md-6 col-12">
@@ -250,15 +242,6 @@
             <h2 id="special" class="toptopic">Special Offer</h2>
              <img src="images/pocket.jpg" alt="Truth Teller" class="responsive center-img"/>
           <p class="primary">Buy 2 + Get 1 FREE one for the office, one to lend out, the perfect gift.  <br> So instead paying  3 x $47 = $141 you will get 3 Pocket Truth Tellers for only $59 Includes and we will include FREE tips that will have you the find whole truth and nothing but the truth. </p> 
-<!-- add paypal button and center by adding style="display: block; margin: 0 auto;" on image line between input and type -->
-<!--59.90-->
-
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-  <input type="hidden" name="cmd" value="_s-xclick" />
-  <input type="hidden" name="hosted_button_id" value="Z2AQ28F3TVCVJ" />
-  <input type="hidden" name="currency_code" value="USD" />
-  <input style="display: block; margin: 0 auto;" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
-</form>
         </div>
       </div>
     </div>
@@ -295,15 +278,6 @@
              <img src="images/answer-any-question.jpg" alt="Truth Teller" class="responsive center-img"/>
             <p class="primary">I want you to be able to receive true answers, <br>
               and I also want you to experience the peace, confidence and trust that comes from getting the right answer to any question anytime, anywhere. <br> Satisfaction Guaranteed and if you order now you also get free shipping anywhere in the USA</p>
-<!-- add paypal button and center by adding style="display: block; margin: 0 auto;" on image line between input and type -->
-<!--59.90-->
-
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-  <input type="hidden" name="cmd" value="_s-xclick" />
-  <input type="hidden" name="hosted_button_id" value="Z2AQ28F3TVCVJ" />
-  <input type="hidden" name="currency_code" value="USD" />
-  <input style="display: block; margin: 0 auto;" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
-</form>
         </div>
       </div>
     </div>
