--- a/working-notes/index--final-ppal-buttons.html
+++ b/working-notes/index--final-ppal-buttons.html
@@ -323,7 +323,7 @@
     <a href="https://www.cosmopolitan.com/lifestyle/a37234650/how-to-use-a-pendulum/"><img src="images/cosmopolitan-logo.jpg" alt="Cosmopolitan" class="responsive"/></a>
   </div>
   <div class="footerNav">
-    <p class=nf><a href="about.html">About</a></p>
+    <p class=nf><a href="">About</a></p>
   </div>
    <div class="footerNav">
      <p class=nf><a href="mailto:info@millenniumppp.com">Contact</a></p>
