--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
             <h2 id="what" class="toptopic">Why is the Pocket Truth Teller shaped the way it is?</h2>
           <p class="primary"> The unique shape of the Pocket Turth Teller makes its responses very easy to read. The design came in a vision that incorporates sacred geometry: it combines two different sized pyramids, one based on the dimensions of the Great Pyramid of Giza, the other is a geometric pyramid based on equilateral triangles. 
             </p>
-            <img src="images/pyramid.jpg" alt="Pyramid Shape" class="responsive center-img"/>
+            <img src="images/pyramid.jpg" class="responsive center-img" alt="Pyramid Shape"/>
         </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-12">
